@@ -494,7 +494,7 @@ public class DownloadTable extends JTable implements MouseListener, MouseMotionL
         for (int i = 3; i >= -1; i--) {
             prop = new HashMap<String, Object>();
             prop.put("links", links);
-            prop.put("prio", new Integer(i));
+            prop.put("prio", Integer.valueOf(i));
             prioPopup.add(tmp = new JMenuItem(new TableAction(panel, JDTheme.II("gui.images.priority" + i, 16, 16), prioDescs[i + 1], TableAction.DOWNLOAD_PRIO, new Property("infos", prop))));
 
             if (prio != null && i == prio) {
